--- a/swt_api_spec/paths/collector_agent/collector_agent.yaml
+++ b/swt_api_spec/paths/collector_agent/collector_agent.yaml
@@ -30,6 +30,7 @@ get:
     - CollectorAgent
   summary: Get all collector agents
   operationId: getAllCollectorAgents
+  description: To get all collector agents. Only administrators can use this operation. If you want to get all collector agents, use the **getAllCollectorAgents** operation.
   parameters:
     - name: page
       in: query
