--- a/swt_api_spec/paths/project/project_{id}.yaml
+++ b/swt_api_spec/paths/project/project_{id}.yaml
@@ -38,7 +38,7 @@ get:
 put:
   tags:
     - Project
-  description: Update a project
+  description: To update a project by id. Only administrators can use this operation.
   summary: Update a project by id
   operationId: updateProjectById
   security:
@@ -73,7 +73,7 @@ put:
 delete:
   tags:
     - Project
-  description: Delete a project
+  description: To delete a project by id. Only administrators can use this operation. If you want to delete a project, use the **deleteProject** operation.
   summary: Delete a project by id
   operationId: deleteProjectById
   parameters:
