--- a/swt_api_spec/paths/training/training.yaml
+++ b/swt_api_spec/paths/training/training.yaml
@@ -4,6 +4,7 @@ post:
     - Training
   summary: Create a training data
   operationId: createTraining
+  description: To create a training data. This information is used in the company dashboard to display all the training data. Only administrators can use this operation.
   requestBody:
     required: true
     content:
@@ -28,6 +29,7 @@ get:
     - Training
   summary: Get all training data
   operationId: getAllTraining
+  description: To get all training data. Only administrators can use this operation. If you want to get all training data, use the **getAllTraining** operation.
   parameters:
     - name: skip
       in: query
