--- a/swt_api_spec/paths/farm/farm_{id}.yaml
+++ b/swt_api_spec/paths/farm/farm_{id}.yaml
@@ -3,7 +3,7 @@ get:
     - Farm
   summary: Get farm by id
   operationId: getFarmById
-  description: To get the farm by its ID.
+  description: To get a farm by its ID. Only administrators can use this operation. If you want to get a farm by its ID, use the **getFarmById** operation.
   parameters:
     - in: path
       name: id
@@ -33,7 +33,7 @@ delete:
     - Farm
   summary: Delete farm by id
   operationId: deleteFarmById
-  description: To delete a farm by its ID.
+  description: To delete a farm by its ID. Only administrators can use this operation. If you want to delete a farm by its ID, use the **deleteFarmById** operation.
   parameters:
     - in: path
       name: id
@@ -59,6 +59,7 @@ patch:
     - Farm
   summary: Update farm by id
   operationId: updateFarmById
+  description: To update a farm by its ID. Only administrators can use this operation. If you want to update a farm by its ID, use the **updateFarmById** operation.
   parameters:
     - name: id
       in: path
