--- a/swt_api_spec/paths/farm_coodinates/farm_coordinate.yaml
+++ b/swt_api_spec/paths/farm_coodinates/farm_coordinate.yaml
@@ -3,6 +3,7 @@ post:
     - Farm_coodinates
   summary: Update farm coordinate
   operationId: updateFarmCoordinate
+  description: To update farm coordinate. Only administrators can use this operation. If you want to update farm coordinate, use the **updateFarmCoordinate** operation.
   security:
     - BearerAuth: []
   requestBody:
