--- a/swt_api_spec/components/schemas/project.yaml
+++ b/swt_api_spec/components/schemas/project.yaml
@@ -102,3 +102,11 @@ properties:
     type: string
     format: date-time
     example: "2022-10-10T00:00:00.000Z"
+  deployed_at:
+    type: string
+    format: date-time
+    example: "2022-10-10T00:00:00.000Z"
+  archived_at:
+    type: string
+    format: date-time
+    example: "2022-10-10T00:00:00.000Z"
