--- a/swt_api_spec/senwisetool.yaml
+++ b/swt_api_spec/senwisetool.yaml
@@ -104,7 +104,7 @@ servers:
       tenant:
         default: www
         description: Your tenant id
-  - url: https://localhost:3000/api
+  - url: https://senw***seTool.com/api
 paths:
   "/users": # user
     $ref: paths/user/user.yaml
