--- a/swt_api_spec/components/schemas/price_plan.yaml
+++ b/swt_api_spec/components/schemas/price_plan.yaml
@@ -51,8 +51,9 @@ properties:
     description: "To indicate the billing cycle of the corresponding price plan"
     example: "Every 1 year | Monthly | etc"
   number_of_billing_cycles:
-    type: integer
+    type: string
     description: "To indicate the number of billing cycles of the corresponding price plan"
+    example: "Unlimited"
   auto_renewal:
     type: boolean
     description: "To indicate the renewal options of the corresponding price plan"
