--- a/swt_api_spec/components/schemas/project.yaml
+++ b/swt_api_spec/components/schemas/project.yaml
@@ -34,15 +34,23 @@ properties:
     type: string
     example: "engineering"
   country:
-    description: the country of the project
     type: string
+
+    description: The countries where the project will take place
     example: "Cameroon"
-  status:
+  city:
     type: string
     format: array
+    description: The city where the project will take place
+    items:
+      type: string
+    example: ["Douala", "buea", "yaounde"]
+  status:
+    type: string
+
     description: The status of the project
-    example: ["active", "draft", "archived"]
-    required:
+
+    enum:
       - ARCHIVED
       - DRAFT
       - ACTIVE
@@ -103,10 +111,6 @@ properties:
     format: date-time
     example: "2022-10-10T00:00:00.000Z"
   deployed_at:
-    type: string
-    format: date-time
-    example: "2022-10-10T00:00:00.000Z"
-  archived_at:
     type: string
     format: date-time
     example: "2022-10-10T00:00:00.000Z"
