updates training session function to role

--- a/swt_api_spec/components/schemas/training_session.yaml
+++ b/swt_api_spec/components/schemas/training_session.yaml
@@ -18,9 +18,9 @@ properties:
   signature:
     type: string
     description: "To hold the digital the signature of the participant"
-  function:
+  role:
     type: string
-    description: To Specify the function of the participant
+    description: To Specify the role of the participant
     example: "Farmer, Trainer"
   phone:
     type: string
