--- a/swt_api_spec/paths/requirement/requirement_{id} .yaml
+++ b/swt_api_spec/paths/requirement/requirement_{id} .yaml
@@ -5,9 +5,9 @@ patch:
   operationId: updateRequirement
   description: To update a requirement. Only administrators can use this operation. If you want to update a requirement, use the **updateRequirement** operation.
   parameters:
-    - name: id
+    - name: plan_id
       in: path
-      description: requireement id
+      description: requireement plan ID from which the requirement will be fetched.
       required: true
       schema:
         type: string
