added the subscrbed company time zone on company schema

--- a/swt_api_spec/components/schemas/company.yaml
+++ b/swt_api_spec/components/schemas/company.yaml
@@ -43,6 +43,9 @@ properties:
   paypal_id:
     type: string
     description: Paypal id of the company
+  timeZone:
+    type: string
+    description: Timezone of the company that is subscribing to the plan
   payment_mode:
     type: string
     description: Payment mode of the company
