added new props on market and on company

--- a/swt_api_spec/components/schemas/company.yaml
+++ b/swt_api_spec/components/schemas/company.yaml
@@ -11,6 +11,9 @@ properties:
     maxLength: 100
     description: Name of the company
     example: senima Co.
+  head_office_email:
+    type: string
+    description: "The email used by people to address issues to Head office manager directly"
   slug:
     type: string
     minLength: 1
