--- a/swt_api_spec/paths/companies/company.yaml
+++ b/swt_api_spec/paths/companies/company.yaml
@@ -13,21 +13,21 @@ post:
           $ref: ../../components/schemas/company.yaml
 
   responses:
-    201:
+    "201":
       description: Company created
       content:
         application/json:
           schema:
             $ref: "../../components/schemas/api-response-success-schema.yaml"
-    400:
+    "400":
       description: "bad request"
-    403: 
-      description: "Authorization failed due to insufficient permissions.",
-      content: 
+    "403":
+      description: "Authorization failed due to insufficient permissions."
+      content:
         type: application/json
-        schema: 
+        schema:
           "$ref": "../../components/schemas/api-error-response.yaml"
-    500:
+    "500":
       description: Internal server error
 
 # get the list of the companies in the system
