--- a/swt_api_spec/components/schemas/project.yaml
+++ b/swt_api_spec/components/schemas/project.yaml
@@ -36,9 +36,11 @@ properties:
   country:
     type: string
     format: array
-
     description: The countries where the project will take place
     example: "Cameroon"
+  campain_id:
+    type: string
+    description: "the id of the campaign"
   city:
     type: string
     format: array
@@ -54,7 +56,8 @@ properties:
       - ARCHIVED
       - DRAFT
       - ACTIVE
-      - INACTIVE
+      - DELETED
+      - DEPLOYED
   start_date:
     description: The start date of the project
     type: string
